# k-ifrs-1115-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README-v2.md  README.md  debug.py  debugging.md  docker-compose.yml  main.py  pyproject.toml  todo.md  내일할일.md
.claude/: settings.local.json
.playwright-cli/: observe-stale.js  page-2026-03-13T14-44-47-005Z.yml  page-2026-03-13T14-45-02-553Z.yml  page-2026-03-13T14-47-11-260Z.yml  page-2026-03-13T14-49-20-028Z.yml
.streamlit/: config.toml
FINAL-REPORT/: 1_PROJECT-OVERVIEW.md  2_DATA-PIPELINE.md  3_DOMAIN-CURATION.md  4_SEARCH-AND-AI.md  5_TEST-AND-DECISIONS.md  6_LESSONS-LEARNED.md
app/: agents.py  config.py  embeddings.py  llm.py  main.py  pipeline.py  prompts.py  reranker.py  retriever.py  state.py  streamlit_app.py
app/api/: routes.py  schemas.py
app/doc-preprocessing/: 01-pdf-to-md.py  02-split-sections.py  extract.py
app/domain/: conclusion.json  context_findings.md  context_main_text.md  context_qna.md  decision_trees.py  decision_trees.py.tmp.17768.1773413751716  decision_trees.py.tmp.17768.1773413763562  decision_trees.py.tmp.17768.1773413775315  decision_trees.py.tmp.17768.1773413784031  decision_trees.py.tmp.17768.1773413793289  decision_trees.py.tmp.18832.1773478990633  decision_trees.py.tmp.30700.1773454931248  decision_trees.py.tmp.31308.1773411438926  decision_trees.py.tmp.31308.1773411444337  decision_trees.py.tmp.32412.1773473435560  decision_trees.py.tmp.32412.1773473446542  decision_trees.py.tmp.32412.1773473462690  decision_trees.py.tmp.32412.1773473473908  decision_trees.py.tmp.32412.1773473482737  summary_matcher.py  topic_content_map.py  topic_content_map.py.tmp.13048.1773482802097  tree_matcher.py  (+16 more)
data/: debug-finding.txt  qna_detailed_summary.txt  qna_summary.txt
docs/: DECISION.md  LIMITATION.md  PROJECT_OVERVIEW.md  REFACTORING.md  STREAMLIT.md  debugging.md  todo.md  개선사항.md
done/: refactoring_plan.md
test/: api_validation.py
usage-data-collecting/: 1_overview.md  analyze_usage.py  export_for_ragas.py  quality_analysis.md  score_usage_logs.py
(+170 files in other folders)
